# COMP-5700

./: .gitignore  Makefile  README.md  manifest.yml  microservice.py  pyproject.toml
.github/: TEMPLATE_README.md
.github/workflows/: main.yml
.traffic/: clones.csv  clones_chart.txt  views.csv  views_chart.txt
rubik/: check.py  cube.py  dispatch.py  info.py  solve.py
rubik/sbom/: events.py  states.py  transitions.py
rubik/test/: checkTest.py  cubeTest.py  dispatchTest.py  solveTest.py
tests/: check_test.py  cube_test.py  dispatch_test.py  solve_test.py
